@@ -8,6 +8,7 @@ import javafx.stage.Stage;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import com.eksamen2025.client.InsertController;
 import com.eksamen2025.client.InsertView;
@@ -26,7 +27,7 @@ public class App extends Application {
         List<Bruker> brukere = NetworkClient.hentBrukereFraServer();
         List<String> brukernavnListe = brukere.stream()
         .map(Bruker::getBrukernavn)
-        .toList();
+        .collect(Collectors.toList());
 
         // 2. Vis dialog for valg av brukernavn
         ChoiceDialog<String> dialog = new ChoiceDialog<>(
